--- a/build.gradle
+++ b/build.gradle
@@ -90,7 +90,7 @@ task testReport(type: TestReport) {
 }
 
 apply from: 'gradle/yeoman.gradle'
-apply from: 'gradle/sonar.gradle'
+//apply from: 'gradle/sonar.gradle'
 apply from: 'gradle/liquibase.gradle'
 apply from: 'gradle/mapstruct.gradle'
 apply from: 'gradle/docker.gradle'
