--- a/build.gradle
+++ b/build.gradle
@@ -89,8 +89,8 @@ task testReport(type: TestReport) {
     reportOn test
 }
 
-//apply from: 'gradle/yeoman.gradle'
-//apply from: 'gradle/sonar.gradle'
+apply from: 'gradle/yeoman.gradle'
+apply from: 'gradle/sonar.gradle'
 apply from: 'gradle/liquibase.gradle'
 apply from: 'gradle/mapstruct.gradle'
 apply from: 'gradle/docker.gradle'
